--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,89 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+body, html {
+  margin: 0;
+
+  height:100%;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search {
+  width: 100%;
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+{/*}::-webkit-scrollbar {
+  display: none;
+}*/}
+.searchTerm {
+  width: 100%;
+  border: 3px solid #303030;
+  border-right: none;
+  padding: 5px;
+  height: 35px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
 }
 
-.App-link {
-  color: #09d3ac;
+.searchTerm:focus{
+  color: #303030;
+}
+
+.searchButton {
+  width: 40px;
+  height: 35px;
+  border: 1px solid #303030;
+  background: #303030;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 10px;
+  font-family: 'Open Sans', sans-serif;
+}
+hr {
+  margin:0;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  font-size:14px;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: pink;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: pink;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: pink;
+}
+
+@media (min-width: 768px){
+  #left {
+    position: absolute;
+    top: 0px;
+    bottom: 0;
+    left: 0;
+    width: 75%;
+    overflow-y: scroll; 
+  }
+  
+  #right {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    overflow-y: scroll;
+    width: 25%;
+  }
 }
