--- a/src/b2bleadsTry/Locations/locations.css
+++ b/src/b2bleadsTry/Locations/locations.css
@@ -6,7 +6,7 @@
     //border-bottom-width: 0px;
     //border-style: dotted;
     overflow-y: scroll;
-    height: 780px;
+    height: 800px;
 
 }
 .city-container{
@@ -33,12 +33,17 @@
     border-top-width: 0px;
     border-bottom-width: 1px;
     border-style: solid;
+    background-color: #81d4fa;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
 }
 .container-scroll::-webkit-scrollbar-track
 {
     
 	-webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3);
-	background-color: white;
+	background-color: #F5F5F5;
 }
 
 .container-scroll::-webkit-scrollbar
@@ -49,6 +54,6 @@
 
 .container-scroll::-webkit-scrollbar-thumb
 {
-	background-color: #2B57D9;
+	background-color: #81d4fa;
 	border: 1px solid white;
 }
