--- a/src/b2bleadsTry/ZipCodes/zipCodes.css
+++ b/src/b2bleadsTry/ZipCodes/zipCodes.css
@@ -1,5 +1,5 @@
 .zipCode-text{
-    color:white;
+    color:gray;
     font-family: 'Chivo', sans-serif;
     font-size: 13px;
     margin-left: 5px;
