--- a/src/b2bleadsTry/searchBar/searchBar.css
+++ b/src/b2bleadsTry/searchBar/searchBar.css
@@ -1,9 +1,10 @@
 .search-bar{
   
     
-    font-family: 'Chivo';
+    font-family: 'Chivo', sans-serif;
     border-radius: 4px;
     margin-bottom: 5px;
+    margin-top: 0px;
     text-align: left;
     width: 100%;
     height: 100%;
@@ -15,13 +16,14 @@
 .search-text {
     border-radius: 5px;
     text-indent: 10px;
+    padding: 7px;
     background-color: rgba(255,255, 255, 1);
     color:#808080;
     border-style: none;
     width:100%;
     font-size: 16px;
     font-family: 'Chivo', sans-serif;
-    margin: 5px;
+    
 }
 
 .search-results{
