--- a/src/components/dumb/CheckBox/checkBox.css
+++ b/src/components/dumb/CheckBox/checkBox.css
@@ -30,6 +30,7 @@
   height: 15px;
   width: 15px;
   transition: all 0.15s ease-out 0s;
+  border-radius: 0rem;
   background: #cbd1d8;
   border: none;
   color: #fff;
@@ -41,10 +42,10 @@
   z-index: 1000;
 }
 .option-input:hover {
-  background: white;
+  background: #343d46;
 }
 .option-input:checked {
-  background: #40e0d0;
+  background: #81d4fa;
 }
 .option-input:checked::before {
   height: 15px;
