--- a/src/components/smart/Categories/categories.css
+++ b/src/components/smart/Categories/categories.css
@@ -11,7 +11,7 @@
     border-right: none;
     padding: 5px;
     height: 35px;
-    border-radius: 4px 0 0 4px;
+    border-radius: 4px;
     outline: none;
     color: #9DBFAF;
   }
@@ -36,7 +36,6 @@
   .wrap{
     margin-bottom: 10px;
     width: 100%;
-    padding: 10px;
     font-family: 'Open Sans', sans-serif;
   }
   hr {
