data page navigation changed

--- a/src/b2bleadsTry/ResultsColumn/resultsColumn.css
+++ b/src/b2bleadsTry/ResultsColumn/resultsColumn.css
@@ -50,3 +50,9 @@
     font-size:20px;
     width:100%;
 }
+.get-sample-button{
+    color:#81d4fa;
+}
+.get-sample-button:hover{
+    color:white;
+}
