--- a/src/b2bleadsTry/Ann-Emp-Range/annEmpRange.css
+++ b/src/b2bleadsTry/Ann-Emp-Range/annEmpRange.css
@@ -91,3 +91,6 @@ input[type='range']::-webkit-slider-thumb::before {
   align-items: center;
   justify-content: center;
 }
+.lock-icon{
+  margin-top: -5px;
+}
