new design on first page applied

--- a/src/b2bleadsTry/Locations/locations.css
+++ b/src/b2bleadsTry/Locations/locations.css
@@ -33,7 +33,7 @@
     border-top-width: 0px;
     border-bottom-width: 1px;
     border-style: solid;
-    background-color: #81d4fa;
+    background-color: #FCBD17;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -54,6 +54,6 @@
 
 .container-scroll::-webkit-scrollbar-thumb
 {
-	background-color: #81d4fa;
+	background-color: #FCBD17;
 	border: 1px solid white;
 }
