--- a/src/b2bleadsTry/PaymentOrEmailPage.css
+++ b/src/b2bleadsTry/PaymentOrEmailPage.css
@@ -20,7 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
+    width: 100%;
     height: 70px;
     background-color: rgb(23, 233, 225);
     border-radius: 5px;
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
+    width: 100%;
     height: 70px;
     background-color: rgb(62, 126, 179);
     border-radius: 5px;
@@ -42,13 +42,26 @@
     color:whitesmoke;
     
 }
-.send_button_text{
-    font-family: 'Chivo', sans-serif;
-    font-size: 19px;
-  
 
-    text-align: center;
-    vertical-align: center;
+@media screen and (max-width: 992px){
+    .send_button_text{
+        font-family: 'Chivo', sans-serif;
+        font-size: 8px;
+      
+    
+        text-align: center;
+        vertical-align: center;
+    }
+}
+@media screen and (min-width: 992px){
+    .send_button_text{
+        font-family: 'Chivo', sans-serif;
+        font-size: 19px;
+      
+    
+        text-align: center;
+        vertical-align: center;
+    }
 }
 .payment_container {
     -webkit-box-shadow: -1px 2px 23px 1px rgba(120,171,184,1);
@@ -127,3 +140,13 @@
  
 }
 
+@media screen and (min-width:1026px){
+    .header-location-payment{
+        font-size:16px;
+    }
+}
+@media screen and (max-width:1026px){
+    .header-location-payment{
+        font-size:12px;
+    }
+}
