--- a/src/b2bleadsTry/yolo.css
+++ b/src/b2bleadsTry/yolo.css
@@ -10,9 +10,10 @@
     height:50px;
 }
 .results-container {
-    border-radius: 5px;
+    border-radius: 7px;
     height: 100%;
-;
+    
+
 
     
 }
@@ -23,7 +24,7 @@
     
 }
 .navbar1-container{
-    border-bottom-color: #81d4fa;
+    border-bottom-color: #FCBD17;
     border-bottom-width: 7px;
     border-bottom-style: solid;
 }
@@ -62,8 +63,8 @@
 
     padding-top: 5px;
     color:#708065;
-    
-    font-family: 'Chivo', sans-serif;
+    //font-family: 'Chivo', sans-serif;
+    font-family: Gilmer-Regular;
     font-size: 20px;
 }
 .header-location{
@@ -93,8 +94,8 @@ body{
 }
 
 .container {
-    margin-top: 5rem;
-    //background-color: rgb(62, 126, 179);  
+    margin-top: 1rem;
+    //background-color: rgb(62, 126, 179);
 }
 
 
@@ -113,12 +114,71 @@ body{
 
 .categories-locations-container::-webkit-scrollbar-thumb
 {
-	background-color: #81d4fa;
+	background-color: #FCBD17;
 	border: 1px solid white;
 }
+.navigation-top-container{
+    width: 100%;
+    height: 50px;
+    background-image: linear-gradient(to right, #E61575 , #2B3079); 
+    background-color:'white';
+    padding-right:100px;
+    position: inherit;
+    display: flex;
+    flex-direction: row;
+} 
 
 @media (min-width: 1240px){
 .container {
     max-width: 1600px !important;
 }}
   
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+   
+}
+  
+li {
+    float: right;
+    max-width: 100px;
+    margin-left:40px;
+
+}
+  
+li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    //color:  #E61575 ;
+    color:white;
+    text-decoration: none;
+    font-weight: 500;
+    font-family: Gilmer-Regular;
+    font-size: 18px;
+}
+  
+li a:hover {
+    color: #E61575;
+    text-decoration: none;
+}
+
+.main-filters-container{
+    border-radius: 7px;
+    padding:40px;
+    background-image: linear-gradient(to right, #E61575  , #2B3079 )    ;
+    //background-color: #E61575;
+    //background-color:#0091ea;
+    //background-color:  rgba(43,48,121,0.6);
+}
+.logo-container{
+    flex:1;
+    max-width:100px;
+    padding-left:40px;
+}
+.navigation-buttons-container{
+    flex:2
+}
