--- a/src/b2bleadsTry/Ann-Emp-Range/annEmpRange.css
+++ b/src/b2bleadsTry/Ann-Emp-Range/annEmpRange.css
@@ -24,7 +24,7 @@ input[type='range']::-webkit-slider-thumb {
   height: 18px;
   width: 18px;
   border-radius: 18px;
-  background-color: #81d4fa;
+  background-color: #FCBD17;
   position: relative;
   margin: 5px 0;
   /* Add some margin to ensure box shadow is shown */
@@ -65,8 +65,7 @@ input[type='range']::-webkit-slider-thumb::before {
 .ann-revenue-header-text {
   padding-top: 5px;
   color: #708065;
-
-  font-family: 'Chivo', sans-serif;
+  font-family: Gilmer-Regular;
   font-size: 20px;
  
 }
@@ -77,7 +76,7 @@ input[type='range']::-webkit-slider-thumb::before {
 }
 .annual-revenue-data-text{
   color:gray;
-    font-family: 'Chivo', sans-serif;
+    font-family: Gilmer-Regular;
     font-size: 13px;
     font-optical-sizing: 13px;
     //display: list-item;          /* This has to be "list-item"                                               */
