--- a/src/b2bleadsTry/NavigationComponent/navigationComponent.css
+++ b/src/b2bleadsTry/NavigationComponent/navigationComponent.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 50px;
     background-image: linear-gradient(to right, #E61575 , #2B3079); 
-    background-color:'white';
+    //background-color:#4A52BF;
     padding-right:100px;
     position: inherit;
     display: flex;
