--- a/src/b2bleadsTry/States/states.css
+++ b/src/b2bleadsTry/States/states.css
@@ -4,10 +4,14 @@
     font-size: 13px;
     margin-left: 5px;
     display: list-item;          /* This has to be "list-item"                                               */
-    list-style-type: square;       /* See https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type     */
+    list-style-type: disc;       /* See https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type     */
     list-style-position: outside;
 }
 .styles-checkbox:hover{
     background-color: #FCBD17;
 }
-
+@media screen and (max-width : 575px){
+    .state-text{
+        font-size: 11px;
+    }
+}
