--- a/src/b2bleadsTry/searchBar/searchBar.css
+++ b/src/b2bleadsTry/searchBar/searchBar.css
@@ -39,6 +39,9 @@
     display:flex;
     align-items: center;
     justify-content: center;
+    z-index: 5000;
+    top:0;
+    left:0;
 }
 .search-results-inner{
     padding-left:12px;
