--- a/src/b2bleadsTry/AlertDone/alertDone.css
+++ b/src/b2bleadsTry/AlertDone/alertDone.css
@@ -1,23 +1,21 @@
 
 .alert-box{
-
-    height:60px;
+    position: absolute;
+    background-color: rgba(0,0,0,.4);
+    background-image: linear-gradient(to right, #E61575  , #2B3079 )    ;
+    top:0;
+    left:0;
     width: 100%;
-    background-color: none;
-    border-radius: 10px;
-    color:gray
+    height:100%;
+    
 }
+
 .text-and-button-container{
-    height: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.message-text{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color:gray;
-    font-size: 22px;
-}
+
 .close-text-container{
     display: flex;
     align-items: center;
@@ -27,27 +25,130 @@
 }
 .close-button-alert{
 
-    height: 30px;
-    width: 30px;
-    border: 2px solid gray;
+    height: 40px;
+    width: 40px;
+    border: 2px solid #E61575;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 15px;
+    border-radius: 20px;
     text-align: center;
     vertical-align: middle;
     line-height: 30px;   
 }
 .close-button-alert:hover{
-    border-color: rgb(62, 126, 179);
-    color:rgb(62, 126, 179);
+    border-color: #FCBD17;
+    color:#FCBD17;
     cursor: pointer;
 }
 
 .close-text-X{
-    font-size: 20px;
-    margin:0
+    font-size: 27px;
+    margin:0;
+    font-weight: 300;
+    color: #E61575;
+}
+.alert-page-icon-container{
+    height: 10%;
+    width: 100%;
+}
+.alert-box-main-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:90%;
+    width: 100%;
+}
+
+
+
+.alert-message-start-text{
+    font-family: Gilmer-Regular;
+    color: #4A52BF;
+    font-size: 18px;
+    font-weight: 300;
+}
+@media screen and (min-device-width: 591px){
+    .message-box-logo-container{
+        margin-top:20px;
+        margin-bottom: 50px;
+    }
+    .message-box-main-header-container{
+        margin-bottom: 40px;
+    }
+    .message-box-explanation-text-container{
+        
+    }
+    .message-box-close-button-container{
+        margin-top: 40px;
+    }
     
+}
+.message-text{
+    font-family: Gilmer-Regular;
+    color:gray;
+    font-size: 16px;
+    line-height: 30px;
+}
+@media screen and (max-width: 590px){
+    .message-box-logo-container{
+        margin-top:5px;
+        margin-bottom:20px;
+        height: 20px;
+        margin-top: 20px;
+    }
+    .message-box-main-header-container{
+        margin-bottom: 0;
+    }
+    .message-box-explanation-text-container{
+        
+    }
+    .message-box-close-button-container{
+        margin-top: 0;
+    }
+    .message-text{
+        font-family: Gilmer-Regular;
+        color:gray;
+        font-size: 14px;
+        line-height: 20px;
+    }
+    .close-button-alert{
+
+        height: 30px;
+        width: 30px;
+        border: 2px solid #E61575;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 15px;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 20px;   
+    }
+    .close-text-X{
+        font-size: 20px;
+    }
+}
+.message-box{
+    width:600px;
+    height:500px;
+    border:4px solid #FCBD17;
+    border-radius: 10px;
+    background-color: white;
+    position:absolute;
+    margin-top: -100px;
+
+}
+@media screen and (max-width:590px){
+    .message-box{
+        width:300px;
+        height:350px;
+        border:4px solid #FCBD17;
+        border-radius: 10px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     
-    
+    }
 }
