--- a/src/b2bleadsTry/NavigationComponent/navigationComponent.css
+++ b/src/b2bleadsTry/NavigationComponent/navigationComponent.css
@@ -1,10 +1,9 @@
 .navigation-top-container{
-    width: 100%;
     height: 50px;
     background-image: linear-gradient(to right, #E61575 , #2B3079); 
     //background-color:#4A52BF;
-    padding-right:100px;
-    position: inherit;
+    padding-right:40px;
+    position:inherit;
     display: flex;
     flex-direction: row;
 } 
@@ -15,7 +14,13 @@
     padding-left:40px;
 }
 .navigation-buttons-container{
-    flex:2
+    flex:2;
+}
+.navigation-with-button-container{
+    flex:2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 ul {
     list-style-type: none;
@@ -43,8 +48,31 @@ li a {
     font-family: Gilmer-Regular;
     font-size: 18px;
 }
-  
+@media screen and (max-width: 711px){
+    li a{
+        font-size: 13px;
+    }
+}
 li a:hover {
     color: #E61575;
     text-decoration: none;
+}
+.icon-bars{
+    color:white;
+    font-size: 25px;
+}
+.navigation-main-button-container{
+    position:absolute;
+    z-index: 2000;
+}
+.navigation-dropdown-menu{
+    position: relative;
+    z-index: 1000;
+    background-color: #2B3079;
+    display:flex;
+    flex-direction: column-reverse;
+    height:200px;
+    width:100px;
+    margin-top:247px;
+    margin-right: -40px;
 }
