mobile-device input field reworked

--- a/src/b2bleadsTry/PaymentOrEmailPage.css
+++ b/src/b2bleadsTry/PaymentOrEmailPage.css
@@ -14,7 +14,7 @@
 .input_text_style::-webkit-input-placeholder {
     font-family: Gilmer-Regular;
     font-size: 15px;
-    line-height: 20;
+    //line-height: 20;
 }
 .send_button_container{
     margin-top: 20px;
