--- a/src/b2bleadsTry/AboutUsComponent/aboutuscomponent.css
+++ b/src/b2bleadsTry/AboutUsComponent/aboutuscomponent.css
@@ -1,5 +1,5 @@
 .header-about-us{
-    font-size:2.6vw;
+    font-size:40px;
     margin-top: 100px;
     margin-left: 2vw;
     margin-bottom:3vh;
@@ -11,7 +11,7 @@
 .aboutus-sub-text{
     padding:0.5vh 0px;  
     font-family: Gilmer-Regular;
-    font-size: 2.2vmin;
+    font-size: 16px;
     margin-left:2vw;
     color:gray;
 }
