--- a/src/b2bleadsTry/yolo.css
+++ b/src/b2bleadsTry/yolo.css
@@ -151,3 +151,16 @@ body{
     //background-color:#0091ea;
     //background-color:  rgba(43,48,121,0.6);
 }
+
+.top-limit-alert-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    height:100%;
+    z-index: 20000;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    position:fixed;
+
+}
