--- a/src/b2bleadsTry/HomeComponent/homeComponent.css
+++ b/src/b2bleadsTry/HomeComponent/homeComponent.css
@@ -1,48 +1,73 @@
-.home-page-bs-container{
-    
+.colored-texts{
+    background-image: linear-gradient(to right,#2B3079, #E61575); 
 }
-@media screen and (max-width:711px){
+@media screen and (max-width:993px){
     .home-page-bs-container{
-        margin-left:10px !important;
+        margin-left:-90px !important;
     }
 }
-@media screen and (min-width:711px){
+@media screen and (min-width:993px){
     .home-page-bs-container{
-        margin-left:40px !important;
+        //margin-left:40px !important;
     }
+}
+.home-text-container{
+    //margin-left: 10%;
+    padding-left:100px;
+    padding-top:100px;
+    padding-bottom: 100px 
 }
 .home-page-main-header{
-    margin-top: 100px;
-    font-family: Gilmer-Heavy;
-    font-size: 40px;
-    background: linear-gradient(to right, #E61575  , #2B3079 )    ;
+    //margin-top: 100px;
+    font-family: Gilmer-Regular;
+    font-weight:300;
+    font-size: 30px;
+    //background: linear-gradient(to right, #E61575  , #2B3079 )    ;
+    background-color: white;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.direction-image-container{
+    width:100px;
+    height:100px;
+    border-radius: 50px;
+    //background-color: palegreen;
+}
 .home-page-sub-header{
-    margin-top: 20px;
+    margin-top: 10px;
     font-family: Gilmer-Heavy;
     font-size: 27px;
-    background: #E61575 ;
+    background: whitesmoke ;
     //background: linear-gradient(to right, #E61575  , #2B3079 );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     //text-shadow: 2px 2px #2B3079;
 }
+.center-direction-text{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+.direction-text-containers{
+    padding:40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
+}
 .home-page-small-text{
-    padding:20px 0px;
-    margin-top: 20px;
+    display: block;
     font-family: Gilmer-Regular;
     font-size: 16px;
     color:gray;
 }
 
 .home-page-small-text-question{
-    margin-top: 20px;
+    display: block;
     font-family: Gilmer-Heavy;
     font-size: 17px;
-    background: #E61575 ;
+    background: #2B3079 ;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -86,8 +111,8 @@
     border-style: solid;
 }
 .discover-leads-button{
-    width: 200px;
-    height: 50px;
+    width: 150px;
+    height: 40px;
     background-color: #FCBD17;
     text-align: center;
     border-radius: 30px;
@@ -105,4 +130,34 @@
     cursor: pointer;
     
 }
+.footer-link-container{
+    height: 100px;
+    border-bottom-width: 1px;
+    border-bottom-color: white;
+    border-bottom-style: solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.footer-links-desing{
+    font-family: Gilmer-Regular;
+    color:white;
+    font-size: 20px;
 
+
+}
+.footer-links-desing:hover{
+    font-family: Gilmer-Regular;
+    color:#E61575;
+    font-size: 20px;
+    cursor: pointer;
+
+
+}
+
+@media screen and (max-width:993px){
+    .footer-links-desing{
+        font-size: 14px !important;
+    }
+}
