--- a/src/b2bleadsTry/DumbComponents/IconComponent/iconComponent.css
+++ b/src/b2bleadsTry/DumbComponents/IconComponent/iconComponent.css
@@ -7,3 +7,12 @@
 .st2 {
     fill:lightgray
 }
+.aimIcon{
+    fill:url(#SVGID_2_);
+}
+.aimIcon-st0{fill:url(#SVGID_1_);}
+.aimIcon-st1{fill:#FFFFFF;}
+.aimIcon-st2{fill:url(#SVGID_2_);}
+
+.velbase-background-logo-st0{opacity:0.15;}
+.velbase-background-logo-st1{fill:#2B3079;}
