--- a/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
+++ b/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
@@ -13,6 +13,12 @@
     .logo-container{
         margin-left:0px !important;
     }
+    li {
+        float: right;
+        max-width: 80px;
+        margin-left:10px;
+    
+    }
 }
 .logo-container{
     flex:1;
@@ -50,7 +56,7 @@ ul {
   
 li {
     float: right;
-    max-width: 110px;
+    max-width: 100px;
     margin-left:40px;
 
 }
@@ -65,6 +71,7 @@ li a {
     font-weight: 500;
     font-family: Gilmer-Regular;
     font-size: 18px;
+
 }
 .download-navigation-button{
     border-radius: 50px;
@@ -79,6 +86,7 @@ li a {
 @media screen and (max-width: 711px){
     li a{
         font-size: 13px;
+
     }
 }
 li a:hover {
@@ -92,6 +100,7 @@ li a:hover {
 .navigation-main-button-container{
     position:absolute;
     z-index: 2000;
+    margin-right: 0px;
 }
 .navigation-dropdown-menu{
     position: relative;
@@ -99,9 +108,10 @@ li a:hover {
     background-color: white;
     display:flex;
     flex-direction: column-reverse;
-    position: inherit;
+    
     height:200px;
-    width:110px;
-    margin-top:322px;
-    margin-right: 0px;
+    width:100px;
+    margin-top:280px;
+    margin-right: -40px;
+    padding-right: 0;
 }
