--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 body, html {
   margin: 0;
-
   height:100%;
+  position:relative; 
+  margin:0;
+  padding:0;
+  overflow:auto;
 }
 .App {
   text-align: center;
