--- a/src/b2bleadsTry/AboutUsComponent/aboutuscomponent.css
+++ b/src/b2bleadsTry/AboutUsComponent/aboutuscomponent.css
@@ -1,17 +1,21 @@
 .header-about-us{
-    font-size:40px;
-    margin-top: 100px;
-    margin-left: 2vw;
-    margin-bottom:3vh;
-    font-family: Gilmer-Heavy;
-    background: linear-gradient(to right, #E61575  , #2B3079 )    ;
+    font-size:20px;
+    margin-top: 50px;
+    //margin-left: 2vw;
+    margin-bottom:10px;
+    font-family: Gilmer-Regular;
+    background: #2B3079;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 .aboutus-sub-text{
     padding:0.5vh 0px;  
     font-family: Gilmer-Regular;
-    font-size: 16px;
+    font-size: 14px;
     margin-left:2vw;
     color:gray;
+}
+.sub-text-aboutus-container{
+    text-align: center;
+    margin-bottom: 200px;
 }
