--- a/src/b2bleadsTry/HomeComponent/homeComponent.css
+++ b/src/b2bleadsTry/HomeComponent/homeComponent.css
@@ -127,6 +127,7 @@
     text-align: center;
     border-radius: 30px;
     display:flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
 }
