--- a/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
+++ b/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
@@ -6,7 +6,7 @@
     //position:inherit;
     display: flex;
     flex-direction: row;
-    width :100%;
+    //width :100%;
     
 } 
 @media screen and (max-width:993px){
@@ -27,8 +27,10 @@
     //padding-left:40px;
     //margin-top: 10px;
     align-items: center;
+    justify-content: flex-start;
+    display:flex;
     padding-top: 20px;
-    margin-left: 100px;
+    //margin-left: 100px;
     
 }
 .navigation-buttons-container{
