--- a/src/b2bleadsTry/States/states.css
+++ b/src/b2bleadsTry/States/states.css
@@ -1,14 +1,29 @@
 .state-text{
-    color:gray;
+    color:black;
     font-family: Gilmer-Regular;
     font-size: 13px;
     margin-left: 5px;
-    display: list-item;          /* This has to be "list-item"                                               */
+    /* display: list-item;          */
     list-style-type: disc;       /* See https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type     */
     list-style-position: outside;
 }
+.state-part-checkbox-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 16px;
+}
+.state-party-text-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 7px;
+}
 .styles-checkbox:hover{
     background-color: #FCBD17;
+    background-color: rgb(115, 119, 167);
+    border-radius: 2px;
+
 }
 @media screen and (max-width : 790px){
     .state-text{
