--- a/src/components/dumb/CheckBox/checkBox1.css
+++ b/src/components/dumb/CheckBox/checkBox1.css
@@ -23,7 +23,7 @@
     -o-appearance: none;
     appearance: none;
     position: relative;
-    top: 6.33333px;
+    //top: 6.33333px;
     right: 0;
     bottom: 0;
     left: 0;
