--- a/src/b2bleadsTry/Locations/locations.css
+++ b/src/b2bleadsTry/Locations/locations.css
@@ -33,7 +33,7 @@
     border-top-width: 0px;
     border-bottom-width: 1px;
     border-style: solid;
-    background-color: #FCBD17;
+    background-color: #333565;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -42,18 +42,18 @@
 .container-scroll::-webkit-scrollbar-track
 {
     
-	-webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3);
+	-webkit-box-shadow: inset 0 0 6px white;
 	background-color: #F5F5F5;
 }
 
 .container-scroll::-webkit-scrollbar
 {
-	width: 5px;
+	width: 7px;
 	background-color: white;
 }
 
 .container-scroll::-webkit-scrollbar-thumb
 {
-	background-color: #FCBD17;
+	background-color: #d5d5d5;
 	border: 1px solid white;
 }
