--- a/src/b2bleadsTry/searchBar/searchBar.css
+++ b/src/b2bleadsTry/searchBar/searchBar.css
@@ -14,15 +14,15 @@
 
 }
 .search-text {
-    border-radius: 5px;
-    text-indent: 10px;
+    border-radius: 4px;
+    /*text-indent: 10px;*/
     padding: 7px;
     background-color: rgba(255,255, 255, 1);
-    color:#808080;
+    color:black;
     border-style: none;
     width:100%;
     font-size: 16px;
-    font-family: 'Chivo', sans-serif;
+    font-family: Gilmer-Regular;
     
 }
 
